src/app/search/search-filter.scss
@import '../../scss/variables.scss';

.hide-filtered .search-hidden {
  display: none !important;
}

.filter-input {
  border-radius: 0;
  -webkit-appearance: none;
  font-size: 13px;
}

.search-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  background: #313233;
  padding-left: 5px;
  margin-left: -3px;
  height: 32px;
  border-radius: 4px;
  min-width: 275px;
  ::placeholder {
    color: #999;
  }

  .fa-search {
    color: #999;
    margin: 0 4px;
    font-size: 12px !important;
  }

  @include phone-portrait {
    width: auto;
    height: 34px;
  }

  &:hover,
  &:focus {
    //background: black;
    outline: none;
  }

  input[type='text'] {
    border: none;
    color: white;
    background: transparent;
    outline: none;
    flex: 1;
    width: 0;
  }
}

.search-link {
  flex: 1;

  // Yikes this is a hack
  @include phone-portrait {
    display: none;

    &.show {
      display: block;
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      height: $header-height;
      z-index: 1;
      margin: 0 !important;

      .search-filter {
        height: 100%;
        padding: 0 0 0 8px;
        margin: 0;
      }

      .filter-input {
        height: 34px;
        margin-top: 0;
        width: 100%;
        box-sizing: border-box;
      }

      .filter-help {
        top: 0;
      }

      .app-icon {
        font-size: 18px !important;
      }

      input,
      select:focus {
        font-size: 16px; // so iOS doesn't zoom
      }
    }
  }
}
.search-button {
  display: none;
  @include phone-portrait {
    display: inline-block;
  }
}

.filter-help {
  cursor: pointer;
  margin: 0 6px;

  @include phone-portrait {
    margin-right: 8px !important;
  }

  .app-icon {
    font-size: 14px !important;
    color: #999 !important;
    // Increase touch target size
    padding: 4px;
    margin: -4px;
    margin-left: 4px;
    &:first-child {
      margin-left: -4px;
    }
    &:hover {
      color: #e8a534 !important;
    }
  }
  .bulk-tag-select {
    background-color: #444;
    position: relative;
    option {
      color: white;
      background: #444;
    }
  }

  span,
  a {
    margin: 0 !important;
  }
}

/* Textcomplete */

.dropdown-menu {
  background-color: white;
  transform: translate(0, -4px);
  border-radius: 4px;
  overflow: hidden;
  .textcomplete-header,
  .textcomplete-footer {
    display: none;
  }
  li {
    padding: 4px 8px;
    &:nth-child(2) {
      border-top: none;
    }
    &:hover {
      background-color: #e8a534;
    }
  }
  .active {
    background-color: #e8a534;
  }
  a {
    color: black;
    font-size: 12px;
    &:hover {
      cursor: pointer;
    }
    text-decoration-line: none;
  }

  @include phone-portrait {
    a {
      font-size: 16px;
    }
    li {
      padding: 8px 10px;
    }
  }
  list-style: none;
  padding: 0;
  margin: 0;
}

